--- a/application/modules/member/locale/mg.po
+++ b/application/modules/member/locale/mg.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Solaitra:Member\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-30 21:53+0100\n"
-"PO-Revision-Date: 2009-12-30 21:53+0100\n"
-"Last-Translator: Eugene Hery <hery@serasera.org>\n"
+"PO-Revision-Date: 2011-04-03 15:03+0100\n"
+"Last-Translator: Hery <hery@serasera.org>\n"
 "Language-Team: Hery Serasera.org <hery@serasera.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
