--- a/application/modules/member/locale/fr.po
+++ b/application/modules/member/locale/fr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Solaitra:Downloads\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-03 15:03+0100\n"
-"PO-Revision-Date: 2011-04-03 15:04+0100\n"
+"PO-Revision-Date: 2011-08-24 01:24+0100\n"
 "Last-Translator: Hery <hery@serasera.org>\n"
 "Language-Team: Hery serasera.org <hery@serasera.org>\n"
 "MIME-Version: 1.0\n"
@@ -158,7 +158,7 @@ msgstr "Connect&eacute;:"
 
 #: ../controllers/ajax.php:48
 msgid "Sign out"
-msgstr "Déconnecter"
+msgstr "D&eacute;connecter"
 
 #: ../controllers/ajax.php:59
 msgid "Login error. Please verify your username "
